# feishu-obsidian-inbox

./: .gitignore  LICENSE  README.md  manifest.json
docs/: feishu-setup.md  project.md
obsidian-plugin/: README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
obsidian-plugin/scripts/: prepare-release.mjs
obsidian-plugin/src/: chatListModal.ts  defaults.ts  feishu.ts  main.ts  markdown.ts  settings.ts  setupGuide.ts  state.ts  types.ts
python-sync/: .env.example  README.md  pyproject.toml
python-sync/src/feishu_obsidian_inbox/: __init__.py  cli.py  config.py  feishu.py  obsidian.py  state.py
python-sync/tests/: test_obsidian.py  test_state.py
