[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu-obsidian-inbox"
version = "0.1.0"
description = "Sync Feishu temporary notes into a local Obsidian inbox file."
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
feishu-obsidian-inbox = "feishu_obsidian_inbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
